<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#2FD3C4"
        app:contentInsetLeft="10dp"
        app:contentInsetRight="10dp"
        app:contentInsetStart="10dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/signup_back"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.5"
               android:src="@mipmap/back_arrow" />
           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="2.5"
               android:layout_centerHorizontal="true"
               android:text="Subscribe"
               android:gravity="center_horizontal|center_vertical"
               android:textColor="#60626F"
               android:textSize="20dp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/appCompatCheckedTextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="0.5"
               android:layout_alignParentEnd="true"
               android:text="Cancel"
               android:gravity="end"
               android:textColor="#FFFFFF"
               android:textSize="15dp" />

       </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signup_toolbar"
        android:background="#2FD3C4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Which plan do you prefer ?"
            android:textSize="18dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            >

            <Button
                android:layout_marginRight="10dp"
                android:id="@+id/subcribe_btn1"
                style="@style/Btn_subscribe"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:textColor="#645B6A"
                android:text="@string/subscribe_monthly"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/subcribe_btn2"
                style="@style/Btn_subscribe"
                android:layout_marginRight="10dp"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:textColor="#645B6A"
                android:text="@string/subscribe_Annual"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/subcribe_btn3"
                style="@style/Btn_subscribe"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"

                android:layout_height="30dp"
                android:textColor="#645B6A"
                android:text="@string/subscribe_3years"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/subcribe_btn4"
                style="@style/Btn_subscribe"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:text="@string/subscribe_5years"
                android:textAllCaps="false"
                android:textColor="#645B6A"
                android:textSize="16sp" />


        </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <TextView
              android:id="@+id/textView4"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:textAlignment="textEnd"
              android:layout_height="match_parent"
              android:layout_marginTop="30dp"
              android:text="@string/subscribe_Gain"
              android:textColor="#F8E69F"
              android:textSize="16dp" />
          <TextView
              android:id="@+id/textViewGain"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="match_parent"
              android:layout_marginTop="21dp"
              android:text="@string/subscribe_percentage"
              android:textColor="#F8E69F"
              android:textStyle="bold"
              android:textSize="25dp" />
      </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/subscribe_subscription"
            android:textColor="#F8E69F"
            android:textSize="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            >
            <TextView
                android:background="@drawable/subscription_roundtxt"
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="$400/year"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"

            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_expand_more_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Loyality Points"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="20"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_expand_more_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Discount"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="$10"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_expand_more_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Loyality Points"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="20"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"

            >
            <CheckBox
                android:id="@+id/subscribe_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_CheckBoxTxt1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=" Terms &amp; Conditions"
                android:textColor="#AB1E55"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/subcribe_btnbottom"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="#645B6A"
            android:text="@string/subscribe_chooseplan"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
